# rac-connectors

./: .gitignore  CHANGELOG.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
.rac/: config.yaml
docs/connectors/: cognee.md  letta.md  mem0.md  neo4j.md  qdrant.md  supermemory.md  zep.md
rac/decisions/: adr-001-python-stack.md  adr-002-connector-interface.md  adr-003-graph-connector-seam-neo4j.md  adr-004-mem0-documents-connector.md  adr-005-zep-documents-connector.md  adr-006-letta-documents-connector.md  adr-007-cognee-documents-connector.md  adr-008-calver-and-contract-version.md  adr-009-vector-store-connectors-embed-externally.md
rac/designs/: graph-connector-shape.md
rac/roadmaps/future/: graph-connector.md
scripts/: sync_readme.py
src/lore_connectors/: __init__.py  base.py  cli.py  contract.py  graph.py  records.py
src/lore_connectors/cognee/: __init__.py  connector.py
src/lore_connectors/letta/: __init__.py  connector.py
src/lore_connectors/mem0/: __init__.py  connector.py
src/lore_connectors/neo4j/: __init__.py  client.py  connector.py
src/lore_connectors/supermemory/: __init__.py  connector.py
src/lore_connectors/zep/: __init__.py  client.py
src/rac_connectors/: __init__.py  base.py  cli.py  contract.py  embedding.py  records.py
src/rac_connectors/cognee/: __init__.py  client.py  connector.py
src/rac_connectors/letta/: __init__.py  client.py  connector.py
src/rac_connectors/mem0/: __init__.py  client.py  connector.py
src/rac_connectors/neo4j/: __init__.py
src/rac_connectors/qdrant/: __init__.py  client.py  connector.py
src/rac_connectors/supermemory/: __init__.py  client.py  connector.py
src/rac_connectors/zep/: __init__.py  connector.py
tests/: fakes.py  fixtures_documents.jsonl  test_cli.py  test_cli_cognee.py  test_cli_letta.py  test_cli_mem0.py  test_cli_neo4j.py  test_cli_qdrant.py  test_cli_zep.py  test_cognee.py  test_cognee_client.py  test_contract.py  test_embedding.py  test_graph.py  test_letta.py  test_letta_client.py  test_mem0.py  test_mem0_client.py  test_neo4j.py  test_neo4j_client.py  test_qdrant.py  test_records.py  test_sdk_client.py  test_supermemory.py  test_zep.py  test_zep_client.py
